--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-spring": "^6.1.8",
+    "react-typist": "^2.0.5",
     "typescript": "^3.1.6"
   },
   "author": "",
