--- a/package.json
+++ b/package.json
@@ -6,7 +6,20 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build && cp ./src/static/CNAME public/ && gh-pages -d public"
+    "deploy": "gatsby build && cp ./src/static/CNAME public/ && gh-pages -d public",
+    "lint": "prettier --list-different --config ./prettier.json \"{src,assets}/**/*.{ts,tsx,scss}\"",
+    "lint:fix": "prettier --list-different --config ./prettier.json --write \"{src,assets}/**/*.{ts,tsx,scss}\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "{src,assets}/**/*.{ts,tsx,scss}": [
+      "prettier --write --config ./prettier.json",
+      "git add"
+    ]
   },
   "dependencies": {
     "gatsby": "^2.0.50",
@@ -39,6 +52,9 @@
   "homepage": "https://github.com/StrontiumJS/Documentation#readme",
   "devDependencies": {
     "@types/react-helmet": "^5.0.7",
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4"
   }
 }
