--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     ]
   },
   "dependencies": {
-    "gatsby": "^2.0.50",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
+    "gatsby": "^2.1.33",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-google-analytics": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.2",
@@ -38,8 +40,8 @@
     "gatsby-transformer-remark": "^2.1.12",
     "gatsby-transformer-sharp": "^2.1.8",
     "node-sass": "^4.10.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-spring": "^6.1.8",
     "react-typist": "^2.0.5",
