--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-plugin-typescript": "^2.0.1",
+    "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-prismjs": "^3.2.5",
     "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-remark": "^2.1.12",
+    "gatsby-transformer-remark": "^2.3.4",
     "gatsby-transformer-sharp": "^2.1.8",
     "node-sass": "^4.10.0",
+    "prismjs": "^1.15.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
