--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   local_dir: public
-  keep-history: true
+  keep-history: false
   on:
     branch: master
 before_script:
