--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@types/lodash": "^4.14.123",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "gatsby": "^2.1.33",
@@ -41,6 +42,7 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-remark": "^2.3.4",
     "gatsby-transformer-sharp": "^2.1.8",
+    "lodash": "^4.17.11",
     "node-sass": "^4.10.0",
     "prismjs": "^1.15.0",
     "react": "^16.8.4",
